--- a/style.css
+++ b/style.css
@@ -48,3 +48,8 @@ section {
     border-radius: 10px;
     border: 3px dashed rgb(82, 85, 95);
 }
+.iframe {
+    width: 800px;
+    height: 527px;
+   border-radius: 14px;
+}
